# flowdesignbuch

./: .gitignore  LICENSE  README.md  codeimage.sh  line_wrap.lua
cpp/csvviewer/: CMakeLists.txt  Commandline.cpp  Commandline.h  Csv.cpp  Csv.h  FileProvider.cpp  FileProvider.h  Interactors.cpp  Interactors.h  Paging.cpp  Paging.h  Record.h  Ui.cpp  Ui.h  main.cpp
cpp/csvviewer/csvviewer/: CMakeLists.txt  Commandline.cpp  Commandline.h  Csv.cpp  Csv.h  FileProvider.cpp  FileProvider.h  Interactors.cpp  Interactors.h  Paging.cpp  Paging.h  Record.h  Ui.cpp  Ui.h  main.cpp  persons.csv
cpp/csvviewer/csvviewer.tests/: CMakeLists.txt  interactors.tests.cpp  ui.tests.cpp
cpp/streams/: CMakeLists.txt  main.cpp
csharp/haushaltsbuch/: haushaltsbuch.sln
csharp/meinebücher/: meinebücher.sln  mybooks.sln  mybooksweb.sln
csharp/mystocks/: mystocks.sln
csharp/wecker/: wecker.sln
csharp/wordwrap/: wordwrap.sln
java/wecker/: pom.xml
nodejs/loccount/: app.js  codefileprovider.js  commandline.js  filesystemprovider.js  loc.js  package-lock.json  package.json  ui.js
nodejs/wordcount/: app.js  consoleui.js  interactors.js  package-lock.json  package.json  stopwords.txt  stopwordsprovider.js  wordcount.js
nodejs/wordwrap/: app.js  commandline.js  consoleui.js  gedicht.txt  integration.js  interactors.js  max_und_moritz.txt  package-lock.json  package.json  textfileprovider.js  wordwrap.js
python/csvviewer/: args.py  console_ui.py  console_ui_tests.py  csv.py  file_provider.py  interactors.py  main.py  paging.py  record.py
python/fallunterscheidungen/: main.py
(+500 files in other folders)
